<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/y500"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/x5"
    android:background="@drawable/bg_dialog_circular">

    <TextView
        android:id="@+id/id_confirm_dialog_title"
        android:layout_width="@dimen/y500"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/tip"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/x2"
        android:layout_margin="@dimen/y20"
        android:background="#C0AAAAAA"/>

    <com.toptech.autoplayer.view.MarqueTextView
        android:id="@+id/id_confirm_dialog_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x80"
        android:gravity="center|left"
        android:layout_marginLeft="@dimen/y30"
        android:layout_marginRight="@dimen/y30"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:textSize="18sp"
        android:text="@string/str_wifi_was_closed"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/x2"
        android:layout_margin="@dimen/y20"
        android:background="#C0AAAAAA"/>

    <LinearLayout
        android:layout_marginTop="@dimen/x5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/y20"
        android:orientation="horizontal">

        <Button
            android:layout_weight="1"
            android:id="@+id/id_btn_ok"
            style="@style/style_btn"
            android:textSize="18sp"
            android:text="@string/str_btn_ok"/>

        <Button
            android:layout_weight="1"
            android:id="@+id/id_btn_cancel"
            style="@style/style_btn"
            android:textSize="18sp"
            android:text="@string/str_btn_cancel"/>
    </LinearLayout>

</LinearLayout>